--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Murtuja\'s Android Lab</string>
+    <string name="hello_message">Hello World!</string>
+    <string name="button_message">I am a button</string>
 </resources>
